tests/reference/asr-test_type_mismatch_01-09e8af3.stderr
semantic error: Type mismatch in shorthand operator, the types must be compatible
 --> tests/errors/test_type_mismatch_01.py:6:5
  |
6 |     a /= b
  |     ^    ^ type mismatch ('i32' and 'f64')
